samples/_failures_safe/1761358142_6df447_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61ad3cd0.c: In function ‘next_token’:
./samples/SAFE/__tmp_61ad3cd0.c:179:13: error: expected identifier at end of input
  179 |             if (token->
      |             ^~
./samples/SAFE/__tmp_61ad3cd0.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61ad3cd0.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_61ad3cd0.c:179:13: error: expected declaration or statement at end of input
